--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "puppeteer": "^16.1.0",
     "speakingurl": "^14.0.1",
     "watch": "^1.0.2"
+  },
+  "dependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
